upgrade, configuration
Issue #33